--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,7 +29,7 @@ code {
   width: 720px;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 200px;
+  padding: 20px 200px
 }
 
 .grid {
@@ -38,4 +38,5 @@ code {
   display: grid;
   flex-wrap: wrap;
   grid-template-columns: repeat(9, 1fr);
+  align-items: center;
 }
